# py-cookbook

./: .gitignore  README.md  analyze_content.py  index.html  package-lock.json  package.json  pyproject.toml  run_all.py  tsconfig.scripts.json  vite.config.ts
.omo/plans/: py-cookbook-web-mvp.md
01-basics/: 02_syntax.py  03_comments.py  04_operators.py  05_type_conversion.py  07_string.py
02-datatypes/: 01_list.py  02_tuple.py  03_dict.py  06_bytes.py
03-control-flow/: 01_conditional.py  02_for_loop.py  04_comprehensions.py
04-functions/: 01_function.py  02_lambda.py  03_decorator.py  04_iterator_generator.py  05_namespace_scope.py
05-oop/: 01_class.py  02_inheritance.py  03_magic_methods.py
06-modules/: 01_module.py  02_name_main.py  03_pip_package.py
07-io/: 01_input_output.py  02_file.py  04_with_statement.py
08-errors/: 01_errors_exceptions.py  01_try_except.py  02_custom_exceptions.py
09-stdlib/: 01_math.py  02_random.py  03_datetime.py  04_re.py  05_json.py  06_csv.py  07_sys.py  08_os_path.py  09_operator.py  10_statistics.py  11_hashlib.py  12_pickle.py  13_stringio.py  14_logging.py  15_subprocess.py  16_queue.py  19_functools.py
10-advanced/: 01_threading.py  02_asyncio.py  04_socket.py
11-builtin/: 01_builtin_functions.py  01_type_functions.py  03_object_io.py
12-pattern-matching/: 01_match_case.py
13-dataclass_enum/: 01_dataclass.py  02_enum.py
14-typing/: 01_type_annotations.py  02_advanced_typing.py
e2e/: app.spec.ts  screenshot.spec.ts
playwright-report/: index.html
scripts/: build-content.ts
src/: App.tsx  index.css
(+52 files in other folders)
